# reranking-service

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cpu_friendly_reranker.py  pyproject.toml  requirements.txt  rerank_types.py
